# konto

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yaml
src/: main.cpp
src/renderer/: renderer.cpp  renderer.h  shader.cpp  shader.h  texture.cpp  texture.h  vertex_types.h
src/renderer/shaders/: quad.frag.glsl  quad.vert.glsl
tests/: main_test.cpp  renderer_test.h
